--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "grunt": "~0.4.5",
     "grunt-jsdoc": "~0.5.4"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "grunt-jsdoc": "^0.5.4"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
