--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,6 @@ language: node_js
 node_js:
   - "0.11"
   - "0.10"
-before_install: npm install -g grunt-cli
+before_install:
+  - "export NODE_ENV=test"
+  - "npm install -g grunt-cli"
