--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@
 /test/tmp/
 /test/version_tmp/
 /tmp/
+.idea
+_out/*.txt
+.DS_Store
 
 ## Specific to RubyMotion:
 .dat*
@@ -33,5 +36,3 @@ build/
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
-.idea
-_out/*.txt
