--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "java"]
 	path = java
 	url = https://github.com/korczis/skull-java.git
+[submodule "c"]
+	path = c
+	url = https://github.com/korczis/skull-c.git
